{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 66,
  "lineage": "3b56fc49-b440-8a00-d7b9-8ed3ce2ae757",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "eigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-0f92e25403aefd225",
            "vpc_id": "vpc-015a1f8408c55ec30"
          },
          "dependencies": [
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0325b95adc6e8a2dc",
            "domain": "vpc",
            "id": "eipalloc-0678c67e0fc5ec0e9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08d0a1212b6ed87ac",
            "private_dns": "ip-10-255-0-80.ec2.internal",
            "private_ip": "10.255.0.80",
            "public_dns": "ec2-3-211-208-233.compute-1.amazonaws.com",
            "public_ip": "3.211.208.233",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vault-deployment-nat-eip",
              "Project": "vault-deployment"
            },
            "tags_all": {
              "Name": "vault-deployment-nat-eip",
              "Project": "vault-deployment"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0323c3dd2da7fb37d",
            "arn": "arn:aws:ec2:us-east-1:029094599989:instance/i-0ce0f242508d57393",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce0f242508d57393",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2600:1f18:ca2:0:9e50:ef1a:c0ea:afd6"
            ],
            "key_name": "n3twork-server",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0675646af7def6e86",
            "private_dns": "ip-10-255-0-162.ec2.internal",
            "private_ip": "10.255.0.162",
            "public_dns": "ec2-3-235-150-250.compute-1.amazonaws.com",
            "public_ip": "3.235.150.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02feb37422302887e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c221fee8e01edb11",
            "tags": {
              "Name": "vault-deployment-bastion",
              "Project": "vault-deployment"
            },
            "tags_all": {
              "Name": "vault-deployment-bastion",
              "Project": "vault-deployment"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-092438fdf0d53e28a"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_subnet.public",
            "data.aws_ssm_parameter.latest_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029094599989:internet-gateway/igw-03d2959dc8ae509c6",
            "id": "igw-03d2959dc8ae509c6",
            "owner_id": "029094599989",
            "tags": {
              "Name": "vault-deployment-igw",
              "Project": "vault-deployment"
            },
            "tags_all": {
              "Name": "vault-deployment-igw",
              "Project": "vault-deployment"
            },
            "vpc_id": "vpc-015a1f8408c55ec30"
          },
          "dependencies": [
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:029094599989:loadbalancer/app/vault-2021062822472728170000000f/b30c39cc4390892f",
            "arn_suffix": "app/vault-2021062822472728170000000f/b30c39cc4390892f",
            "dns_name": "vault-2021062822472728170000000f-1579797275.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:029094599989:loadbalancer/app/vault-2021062822472728170000000f/b30c39cc4390892f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "dualstack",
            "load_balancer_type": "application",
            "name": "vault-2021062822472728170000000f",
            "name_prefix": "vault-",
            "security_groups": [
              "sg-06a2996f2c2fdbc9b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b93f96c2bb48bf70"
              },
              {
                "subnet_id": "subnet-0c221fee8e01edb11"
              }
            ],
            "subnets": [
              "subnet-0b93f96c2bb48bf70",
              "subnet-0c221fee8e01edb11"
            ],
            "tags": {
              "Name": "vault-deployment-alb",
              "Project": "vault-deployment"
            },
            "tags_all": {
              "Name": "vault-deployment-alb",
              "Project": "vault-deployment"
            },
            "vpc_id": "vpc-015a1f8408c55ec30",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_subnet.public",
            "aws_vpc.vault",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:029094599989:listener/app/vault-2021062822472728170000000f/b30c39cc4390892f/9c1d9d149ddc40d3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:029094599989:listener/app/vault-2021062822472728170000000f/b30c39cc4390892f/9c1d9d149ddc40d3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:029094599989:loadbalancer/app/vault-2021062822472728170000000f/b30c39cc4390892f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_security_group.load_balancer",
            "aws_subnet.public",
            "aws_vpc.vault",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:029094599989:listener/app/vault-2021062822472728170000000f/b30c39cc4390892f/90b5ff2e844aead3",
            "certificate_arn": "arn:aws:acm:us-east-1:029094599989:certificate/fefbea18-98fc-42ce-8baf-acc9e26f2ff7",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:029094599989:targetgroup/vault-2021062822471336340000000a/a56c471f8d25cf84",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:029094599989:listener/app/vault-2021062822472728170000000f/b30c39cc4390892f/90b5ff2e844aead3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:029094599989:loadbalancer/app/vault-2021062822472728170000000f/b30c39cc4390892f",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-FS-2018-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.alb_targets",
            "aws_security_group.load_balancer",
            "aws_subnet.public",
            "aws_vpc.vault",
            "data.aws_acm_certificate.vault_alb_cert",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_targets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:029094599989:targetgroup/vault-2021062822471336340000000a/a56c471f8d25cf84",
            "arn_suffix": "targetgroup/vault-2021062822471336340000000a/a56c471f8d25cf84",
            "deregistration_delay": 30,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/v1/sys/health",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:029094599989:targetgroup/vault-2021062822471336340000000a/a56c471f8d25cf84",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "vault-2021062822471336340000000a",
            "name_prefix": "vault-",
            "port": 8200,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "vault-deployment-tg",
              "Project": "vault-deployment"
            },
            "tags_all": {
              "Name": "vault-deployment-tg",
              "Project": "vault-deployment"
            },
            "target_type": "instance",
            "vpc_id": "vpc-015a1f8408c55ec30"
          },
          "dependencies": [
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0678c67e0fc5ec0e9",
            "connectivity_type": "public",
            "id": "nat-04d63e47c5213513f",
            "network_interface_id": "eni-08d0a1212b6ed87ac",
            "private_ip": "10.255.0.80",
            "public_ip": "3.211.208.233",
            "subnet_id": "subnet-0c221fee8e01edb11",
            "tags": {
              "Name": "vault-deployment-nat",
              "Project": "vault-deployment"
            },
            "tags_all": {
              "Name": "vault-deployment-nat",
              "Project": "vault-deployment"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.vault",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-092a399d2b815c2901080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04d63e47c5213513f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-092a399d2b815c290",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.vault",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_internet_access_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-0f92e25403aefd225",
            "gateway_id": "",
            "id": "r-rtb-092a399d2b815c2902750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-092a399d2b815c290",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_egress_only_internet_gateway.eigw",
            "aws_route_table.private",
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03d2959dc8ae509c6",
            "id": "r-rtb-00b905fde1a9e4b641080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00b905fde1a9e4b64",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029094599989:route-table/rtb-092a399d2b815c290",
            "id": "rtb-092a399d2b815c290",
            "owner_id": "029094599989",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-0f92e25403aefd225",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04d63e47c5213513f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vault-deployment-private-rtb",
              "Project": "vault-deployment"
            },
            "tags_all": {
              "Name": "vault-deployment-private-rtb",
              "Project": "vault-deployment"
            },
            "vpc_id": "vpc-015a1f8408c55ec30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029094599989:route-table/rtb-00b905fde1a9e4b64",
            "id": "rtb-00b905fde1a9e4b64",
            "owner_id": "029094599989",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d2959dc8ae509c6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vault-deployment-public-rtb",
              "Project": "vault-deployment"
            },
            "tags_all": {
              "Name": "vault-deployment-public-rtb",
              "Project": "vault-deployment"
            },
            "vpc_id": "vpc-015a1f8408c55ec30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a491f27b1f653bb9",
            "route_table_id": "rtb-092a399d2b815c290",
            "subnet_id": "subnet-066000fa1789da496"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vault",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0938ff5870bce0e58",
            "route_table_id": "rtb-092a399d2b815c290",
            "subnet_id": "subnet-095568fa4e89b7066"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vault",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0922175cb615b2649",
            "route_table_id": "rtb-00b905fde1a9e4b64",
            "subnet_id": "subnet-0c221fee8e01edb11"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vault",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0fe8c8411a7f959",
            "route_table_id": "rtb-00b905fde1a9e4b64",
            "subnet_id": "subnet-0b93f96c2bb48bf70"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vault",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029094599989:security-group/sg-092438fdf0d53e28a",
            "description": "Firewall for the operator bastion instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow any outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092438fdf0d53e28a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic.",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vault-deployment-bastion-sg2021062822471523540000000b",
            "name_prefix": "vault-deployment-bastion-sg",
            "owner_id": "029094599989",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vault-deployment-bastion-sg",
              "Project": "vault-deployment"
            },
            "tags_all": {
              "Name": "vault-deployment-bastion-sg",
              "Project": "vault-deployment"
            },
            "timeouts": null,
            "vpc_id": "vpc-015a1f8408c55ec30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kms_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029094599989:security-group/sg-0a24055260dab2e7e",
            "description": "Firewall for the KMS Endpoint.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow any outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a24055260dab2e7e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic from vault instances.",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04270701efc20cfd7"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS traffic from vault instances.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04270701efc20cfd7"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vault-deployment-kms-endpoint-sg20210628224713360000000007",
            "name_prefix": "vault-deployment-kms-endpoint-sg",
            "owner_id": "029094599989",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vault-deployment-kms-endpoint-sg",
              "Project": "vault-deployment"
            },
            "tags_all": {
              "Name": "vault-deployment-kms-endpoint-sg",
              "Project": "vault-deployment"
            },
            "timeouts": null,
            "vpc_id": "vpc-015a1f8408c55ec30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029094599989:security-group/sg-06a2996f2c2fdbc9b",
            "description": "Firewall for the application load balancer fronting the vault instances.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow any outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a2996f2c2fdbc9b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic.",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic.",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vault-deployment-alb-sg20210628224713360500000008",
            "name_prefix": "vault-deployment-alb-sg",
            "owner_id": "029094599989",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vault-deployment-alb-sg",
              "Project": "vault-deployment"
            },
            "tags_all": {
              "Name": "vault-deployment-alb-sg",
              "Project": "vault-deployment"
            },
            "timeouts": null,
            "vpc_id": "vpc-015a1f8408c55ec30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vault_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029094599989:security-group/sg-04270701efc20cfd7",
            "description": "Firewall for the vault instances.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow any outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04270701efc20cfd7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH traffic from vault bastion.",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-092438fdf0d53e28a"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from Load Balancer.",
                "from_port": 8200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06a2996f2c2fdbc9b"
                ],
                "self": false,
                "to_port": 8200
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from fellow vault instances that have this SG.",
                "from_port": 8201,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8201
              }
            ],
            "name": "vault-deployment-vault-instance-sg20210628224713362500000009",
            "name_prefix": "vault-deployment-vault-instance-sg",
            "owner_id": "029094599989",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vault-deployment-vault-instance-sg",
              "Project": "vault-deployment"
            },
            "tags_all": {
              "Name": "vault-deployment-vault-instance-sg",
              "Project": "vault-deployment"
            },
            "timeouts": null,
            "vpc_id": "vpc-015a1f8408c55ec30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_allow_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH traffic.",
            "from_port": 22,
            "id": "sgrule-2179788449",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-092438fdf0d53e28a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow any outbound traffic.",
            "from_port": 0,
            "id": "sgrule-3474976679",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-092438fdf0d53e28a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kms_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow any outbound traffic.",
            "from_port": 0,
            "id": "sgrule-3137425505",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a24055260dab2e7e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kms_endpoint",
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "load_balancer_allow_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS traffic.",
            "from_port": 443,
            "id": "sgrule-2622049931",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06a2996f2c2fdbc9b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "load_balancer_allow_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP traffic.",
            "from_port": 80,
            "id": "sgrule-4065217578",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06a2996f2c2fdbc9b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "load_balancer_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow any outbound traffic.",
            "from_port": 0,
            "id": "sgrule-4275536840",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06a2996f2c2fdbc9b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vault_instance_allow_22_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow SSH traffic from vault bastion.",
            "from_port": 22,
            "id": "sgrule-3441643148",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04270701efc20cfd7",
            "self": false,
            "source_security_group_id": "sg-092438fdf0d53e28a",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.vault_instance",
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vault_instance_allow_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow HTTPS traffic from vault instances.",
            "from_port": 443,
            "id": "sgrule-4175511117",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a24055260dab2e7e",
            "self": false,
            "source_security_group_id": "sg-04270701efc20cfd7",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kms_endpoint",
            "aws_security_group.vault_instance",
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vault_instance_allow_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow HTTP traffic from vault instances.",
            "from_port": 80,
            "id": "sgrule-3154918836",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a24055260dab2e7e",
            "self": false,
            "source_security_group_id": "sg-04270701efc20cfd7",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.kms_endpoint",
            "aws_security_group.vault_instance",
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vault_instance_allow_8200",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow traffic from Load Balancer.",
            "from_port": 8200,
            "id": "sgrule-2975957981",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04270701efc20cfd7",
            "self": false,
            "source_security_group_id": "sg-06a2996f2c2fdbc9b",
            "to_port": 8200,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_security_group.vault_instance",
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vault_instance_allow_8201",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow traffic from fellow vault instances that have this SG.",
            "from_port": 8201,
            "id": "sgrule-2067200383",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04270701efc20cfd7",
            "self": true,
            "source_security_group_id": "sg-04270701efc20cfd7",
            "to_port": 8201,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vault_instance",
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vault_instance_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow any outbound traffic.",
            "from_port": 0,
            "id": "sgrule-1297589967",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04270701efc20cfd7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vault_instance",
            "aws_vpc.vault"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029094599989:subnet/subnet-066000fa1789da496",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.255.2.0/24",
            "id": "subnet-066000fa1789da496",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029094599989",
            "tags": {
              "Name": "vault-deployment-private-us-east-1a",
              "Project": "vault-deployment"
            },
            "tags_all": {
              "Name": "vault-deployment-private-us-east-1a",
              "Project": "vault-deployment"
            },
            "vpc_id": "vpc-015a1f8408c55ec30"
          },
          "dependencies": [
            "aws_vpc.vault",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029094599989:subnet/subnet-095568fa4e89b7066",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.255.3.0/24",
            "id": "subnet-095568fa4e89b7066",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029094599989",
            "tags": {
              "Name": "vault-deployment-private-us-east-1b",
              "Project": "vault-deployment"
            },
            "tags_all": {
              "Name": "vault-deployment-private-us-east-1b",
              "Project": "vault-deployment"
            },
            "vpc_id": "vpc-015a1f8408c55ec30"
          },
          "dependencies": [
            "aws_vpc.vault",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029094599989:subnet/subnet-0c221fee8e01edb11",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.255.0.0/24",
            "id": "subnet-0c221fee8e01edb11",
            "ipv6_cidr_block": "2600:1f18:ca2::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0c3968b3ebab40273",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "029094599989",
            "tags": {
              "Name": "vault-deployment-public-us-east-1a",
              "Project": "vault-deployment"
            },
            "tags_all": {
              "Name": "vault-deployment-public-us-east-1a",
              "Project": "vault-deployment"
            },
            "vpc_id": "vpc-015a1f8408c55ec30"
          },
          "dependencies": [
            "aws_vpc.vault",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029094599989:subnet/subnet-0b93f96c2bb48bf70",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.255.1.0/24",
            "id": "subnet-0b93f96c2bb48bf70",
            "ipv6_cidr_block": "2600:1f18:ca2:1::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-031e35a3682977a75",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "029094599989",
            "tags": {
              "Name": "vault-deployment-public-us-east-1b",
              "Project": "vault-deployment"
            },
            "tags_all": {
              "Name": "vault-deployment-public-us-east-1b",
              "Project": "vault-deployment"
            },
            "vpc_id": "vpc-015a1f8408c55ec30"
          },
          "dependencies": [
            "aws_vpc.vault",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vault",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029094599989:vpc/vpc-015a1f8408c55ec30",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.255.0.0/20",
            "default_network_acl_id": "acl-0d87565beaf043914",
            "default_route_table_id": "rtb-06c3dd61762e07605",
            "default_security_group_id": "sg-0994c61b5deee97b5",
            "dhcp_options_id": "dopt-4ac69a31",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-015a1f8408c55ec30",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-08a0065c30fb650e8",
            "ipv6_cidr_block": "2600:1f18:ca2::/56",
            "main_route_table_id": "rtb-06c3dd61762e07605",
            "owner_id": "029094599989",
            "tags": {
              "Name": "vault-deployment-vpc",
              "Project": "vault-deployment"
            },
            "tags_all": {
              "Name": "vault-deployment-vpc",
              "Project": "vault-deployment"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029094599989:vpc-endpoint/vpce-05f226410481eb205",
            "cidr_blocks": [
              "3.218.182.0/24",
              "3.218.180.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "id": "vpce-05f226410481eb205",
            "owner_id": "029094599989",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-092a399d2b815c290"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "state": "available",
            "tags": {
              "Name": "vault-deployment-dynamodb-endpoint",
              "Project": "vault-deployment"
            },
            "tags_all": {
              "Name": "vault-deployment-dynamodb-endpoint",
              "Project": "vault-deployment"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-015a1f8408c55ec30"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_vpc.vault",
            "data.aws_vpc_endpoint_service.dynamodb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029094599989:vpc-endpoint/vpce-0c41f95602c077f8f",
            "dns_entry": [
              {
                "dns_name": "vpce-0c41f95602c077f8f-cvsqh4f2.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c41f95602c077f8f-cvsqh4f2-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c41f95602c077f8f-cvsqh4f2-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z028891229DF5PZE5L3BK"
              }
            ],
            "id": "vpce-0c41f95602c077f8f",
            "network_interface_ids": [
              "eni-043589b4bf44d7c5b",
              "eni-0c43be1095fed6843"
            ],
            "owner_id": "029094599989",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a24055260dab2e7e"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "state": "available",
            "subnet_ids": [
              "subnet-066000fa1789da496",
              "subnet-095568fa4e89b7066"
            ],
            "tags": {
              "Name": "vault-deployment-kms-endpoint",
              "Project": "vault-deployment"
            },
            "tags_all": {
              "Name": "vault-deployment-kms-endpoint",
              "Project": "vault-deployment"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-015a1f8408c55ec30"
          },
          "dependencies": [
            "aws_security_group.kms_endpoint",
            "aws_subnet.private",
            "aws_vpc.vault",
            "data.aws_availability_zones.available",
            "data.aws_vpc_endpoint_service.kms"
          ]
        }
      ]
    }
  ]
}